--- a/camkat.css
+++ b/camkat.css
@@ -427,8 +427,19 @@
             }
 
             .desktop-menu {
-                display: none;
+               /* //display: none; */
+                position: absolute;
+                background: var(--white);
+                top: 60px;
+                /* right: 60px; */
+                left: 60px;
+                right: auto;
+                height: auto;
+                border: 1px solid var(--very-light-pink);
+                border-radius: 6px;
+                padding: 20px 20px 0 20px;
             }
+
 
             /* media query para un estilo de mis ordenes pedidas: */
             .aside {
