--- a/camkat.css
+++ b/camkat.css
@@ -283,7 +283,7 @@
         position: fixed;
         top: 0;
         width: 50%;
-        height: 80%;
+        height: 100%;
         background-color: white;
         z-index: 9999; 
         /* display: none; */
@@ -305,7 +305,9 @@
     #productDetail > img:nth-child(2) {
       width: 100%;
       height: 360px;/* estaba en 360, parecia  muy alto */
-      object-fit: cover;
+      object-fit: contain;
+      background-color: #000000;
+      /* object-position: bottom; */
       border-radius: 0 0 20px 20px;
     }
     #productDetail .product-info {
@@ -466,11 +468,8 @@
             .product-card img {
                 width: 140px;
                 height: 140px;
-            }
-      
-            /* configs para desplegable de detalles de producto  */
-
-            
+            }          
+              /* configs para desplegable de detalles de producto  */
 
         }
 
