--- a/camkat.css
+++ b/camkat.css
@@ -1,5 +1,20 @@
 /* Esto es un proyecto forkeado de platzi,m llamado curso de frontend developmen, fue forkeado como curso de java scrpt practico ya ahora lo estoy personalizando para mi tienda CamKatStore, haremos cambios de variables, aumento de variables y funciones y sus imagenes seran de ropa. Este proyecto sigue siendo meramente tecnico */
 
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html{
+     width: 100%;
+    height: 100%; 
+    /* font-size: 62.5%; */
+}
+
+
+
     /* settings generales */
         :root { 
             --white: #FFFFFF;
@@ -13,6 +28,8 @@
         }
 
         body {
+            height: 100%;
+            height: 100%;
             margin: 0;
             font-family: 'Quicksand', sans-serif;
         }
@@ -205,6 +222,7 @@
 
     /* aside  */#shoppingCartContainer{
         background-color: var(--white);
+        height: 100%;
         width: 360px;
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
         box-sizing: border-box;
@@ -367,6 +385,8 @@
     .main-container{
         background-color: #F8F0E5;
         width: 100%;
+        padding: 0 0 5% 0;
+
     }
 
     .main-container h1 {
@@ -421,6 +441,7 @@
    
     .divImagenLogocamkat{
         width: 100%;
+        height: 87%;
         padding: 3% 0 10% 0;
     }
 
@@ -442,11 +463,110 @@
    .contInfoEmpresa1,
     .contInfoEmpresa2,
      .contInfoEmpresa3  {
-        width: 90%;
+        width: 100%;
         background-color:#DAC0A3;  
         padding: 5%;
     }
 
+/* configs para footer */
+
+.footerCamkat {
+    display: flex;
+    flex-direction: column;
+    background-color:#DAC0A3;
+    width: 100%;
+    height: 30%;
+    color: var(--white)
+   /*  flex-wrap: wrap;
+    justify-content: center; */
+    
+
+}
+
+.divMarcasRamdom {
+    display: flex;
+    width: 100%;
+    height: 25%;
+    gap: 5%;
+    align-items: center;
+    background-color: #B99470;
+   
+}
+
+.footerDivPrincipal {
+    display: flex;
+    width: 100%;
+    height: 55%;
+    padding: 1% 0 1% 0;
+  /*   object-fit: contain; */
+    flex-direction: row;
+    font-size:var(--sm);
+    color: #7D0A0A;
+    background-color: #EEE2DE;
+}
+
+.divCopyRight {
+    display: flex;
+    padding: 0 0 0 10%;
+    /* justify-content: center; */
+    width: 100%;
+    height: 20%;
+    font-size:var(--sm);
+    background-color: #B99470;
+}
+
+.divMarcasRamdom div {
+    padding: 0.4% 0;
+      width: 8.2%;
+      height: 100%;
+    }
+
+.marcaRandom1,
+.marcaRandom2,
+.marcaRandom3,
+.marcaRandom4,
+.marcaRandom5,
+.marcaRandom6,
+.marcaRandom7,
+.marcaRandom8{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+
+
+.divfooterInfo {
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 0 10%;
+    width: 40%;
+    height: 100%;
+    
+}
+
+.divFooterTodoNosotros {
+    display: flex;
+    list-style-type:none;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
+}
+.divFooterTodoNosotros ul {
+    list-style-type:none;
+}
+
+.divOtrosSitios {
+    display:flex;
+    list-style-type:none;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
+}
+
+.divOtrosSitios ul {
+    list-style-type:none;
+}
 
 
         @media (max-width: 640px) {
