--- a/camkat.css
+++ b/camkat.css
@@ -28,8 +28,8 @@ html{
         }
 
         body {
-            height: 100%;
-            height: 100%;
+            height: 100vh;
+            width: 100vw;
             margin: 0;
             font-family: 'Quicksand', sans-serif;
         }
@@ -58,6 +58,8 @@ html{
             justify-content: space-between;
             padding: 0 24px;
             border-bottom: 1px solid var(--very-light-pink);
+            width: 100%;
+            height: 7.6%;
         }
 
         .menu {
@@ -75,7 +77,7 @@ html{
             margin: 0;
             display: flex;
             align-items: center;
-            height: 60px;
+            height: 100%;
         }
 
         .navbar-left {
@@ -383,10 +385,12 @@ html{
 
 /* esta es para un titulo puesto antes del div cards container */
     .main-container{
+        /* flex: 1; */
         background-color: #F8F0E5;
         width: 100%;
+       /*  height: auto; */
+        min-height: 62.4%;
         padding: 0 0 5% 0;
-
     }
 
     .main-container h1 {
@@ -400,6 +404,7 @@ html{
     .cards-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, 240px);
+      /* height: 80%; */
       gap: 26px;
       place-content: center;
       margin-top: 20px;
@@ -476,7 +481,8 @@ html{
     background-color:#DAC0A3;
     width: 100%;
     height: 30%;
-    color: var(--white)
+    color: var(--white);
+    margin-top: auto;
    /*  flex-wrap: wrap;
     justify-content: center; */
     
@@ -552,6 +558,7 @@ html{
     height: 100%;
     justify-content: center;
 }
+
 .divFooterTodoNosotros ul {
     list-style-type:none;
 }
