copie html y java script desde rama de prueba, aun me falta css

--- a/camkat.css
+++ b/camkat.css
@@ -620,7 +620,9 @@ html{
                 width: 140px;
                 height: 140px;
             }          
-              /* configs para desplegable de detalles de producto  */
+              /* configs para footer: */
+
+            
 
         }
 
