--- a/camkatMob.css
+++ b/camkatMob.css
@@ -56,14 +56,14 @@ html{
         nav {
             display: flex;
             justify-content: space-between;
-            padding: 0 24px;
+            padding: 2% 4% 2% 4%;
             border-bottom: 1px solid var(--very-light-pink);
             width: 100%;
             height: 7.6%;
         }
 
         .menu {
-            display: none;
+            display: block;
         }
 
         .logo {
@@ -92,6 +92,7 @@ html{
         } */
 
         .navbar-left ul {
+            display: none;
             margin-left: 12px;
         }
 
@@ -112,6 +113,7 @@ html{
         }
 
         .navbar-email {
+            display: none;
             color: var(--very-light-pink);
             cursor:pointer;
             font-size: var(--sm);
@@ -141,16 +143,21 @@ html{
 
         /* settings del menu de compras */
 
-    .desktop-menu {
-        position: absolute;
-        background: var(--white);
-        top: 60px;
-        right: 60px;
-      height: auto;
-      border: 1px solid var(--very-light-pink);
-      border-radius: 6px;
-      padding: 20px 20px 0 20px;
-    }
+        .desktop-menu {
+               
+                position: absolute;
+                background: var(--white);
+                top: 60px;
+                
+                left: 60px;
+                right: auto;
+                height: auto;
+                border: 1px solid var(--very-light-pink);
+                border-radius: 6px;
+                padding: 20px 20px 0 20px;
+            }
+
+
     .desktop-menu ul {
       list-style: none;
       padding: 0;
@@ -232,7 +239,7 @@ html{
     /* aside  */#shoppingCartContainer{
         background-color: var(--white);
         height: 100%;
-        width: 360px;
+        width: 100%;
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
         box-sizing: border-box;
         position: absolute;
@@ -410,18 +417,18 @@ html{
 
     .cards-container {
       display: grid;
-      grid-template-columns: repeat(auto-fill, 240px);
+      grid-template-columns: repeat(auto-fill, 140px);
       /* height: 80%; */
       gap: 26px;
       place-content: center;
       margin-top: 20px;
     }
     .product-card {
-      width: 240px;
+      width: 140px;
     }
     .product-card img {
-      width: 240px;
-      height: 240px;
+      width: 140px;
+      height: 140px;
       border-radius: 20px;
       object-fit: cover;
     }
@@ -601,59 +608,59 @@ html{
 
 
         @media (max-width: 640px) {
-            .menu {
+            /* .menu {
                 display: block;
-            }
+            } */
 
-            .navbar-left ul {
+          /*   .navbar-left ul {
                 display: none;
-            }
+            } */
 
-            .navbar-email {
+         /*    .navbar-email {
                 display: none;
-            }
+            } */
 
-            .desktop-menu {
-               /* //display: none; */
+            /* .desktop-menu {
+               
                 position: absolute;
                 background: var(--white);
                 top: 60px;
-                /* right: 60px; */
+                
                 left: 60px;
                 right: auto;
                 height: auto;
                 border: 1px solid var(--very-light-pink);
                 border-radius: 6px;
                 padding: 20px 20px 0 20px;
-            }
+            } */
 
             /* media query para un estilo de mis ordenes pedidas: */
-            .aside {
+            /* .aside {
                 width: 100%;
-            }
+            } */
 
             /* mediaquery de mis productos */
 
-            .cards-container {
+            /* .cards-container {
                 grid-template-columns: repeat(auto-fill, 140px);
-            }
-            .product-card {
+            } */
+          /*   .product-card {
                 width: 140px;
-            }
-            .product-card img {
+            } */
+            /* .product-card img {
                 width: 140px;
                 height: 140px;
-            }          
+            } */          
               /* configs para footer: */
 
             
 
         }
 
-        @media(min-width:641px) {
+        /* @media(min-width:641px) {
 
             .mobile-menu {
                 display: none;
             }
         }
-
+ */
