--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -25,6 +25,7 @@ html{
             --sm: 14px;
             --md: 16px;
             --lg: 18px;
+            --xx: 12px;
         }
 
         body {
@@ -56,7 +57,7 @@ html{
         nav {
             display: flex;
             justify-content: space-between;
-            padding: 0 24px;
+            padding: 0;
             border-bottom: 1px solid var(--very-light-pink);
             width: 100%;
             height: 7.6%;
@@ -82,9 +83,15 @@ html{
 
         .navbar-left {
             display: flex;
-           /*  width: 70%; */
+            font-size: var(--xx);
+            width: 70%;
         }
 
+        .navbar-right {
+            display: flex;
+            width: 30%;
+            justify-content: center;
+        }
         /*  .navbar-right {
             display: flex;
             justify-content:end;
@@ -100,7 +107,7 @@ html{
             text-decoration: none;
             color: var(--very-light-pink);
             border: 1px solid var(--white);
-            padding: 8px;
+            padding: 4px;
             border-radius: 8px;
         }
 
@@ -112,10 +119,10 @@ html{
         }
 
         .navbar-email {
-            display: block;
+            /* display: none; */
             color: var(--very-light-pink);
             cursor:pointer;
-            font-size: var(--sm);
+            font-size: var(--md);
             margin-right: 12px;
         }
 
