--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -98,6 +98,16 @@ html{
             width: 30%;
         } */
 
+        .divGmailUsuario{
+            width: 35px;
+            height: 35px;
+        }
+
+        .gmailUsuario{
+            width: 100%;
+            height: 100%;
+        }
+
         .navbar-left ul {
             margin-left: 12px;
         }
@@ -120,6 +130,8 @@ html{
 
         .navbar-email {
             /* display: none; */
+            height: auto;
+            width: 50%;
             color: var(--very-light-pink);
             cursor:pointer;
             font-size: var(--md);
