--- a/camkatMob.css
+++ b/camkatMob.css
@@ -68,6 +68,8 @@ html{
 
         .logo {
             width: 100px;
+            height: 100%;
+            object-fit:contain;
         }
 
         .navbar-left ul,
@@ -506,7 +508,7 @@ html{
 .divMarcasRamdom {
     display: flex;
     width: 100%;
-    height: 25%;
+    height: 10%;
     gap: 5%;
     align-items: center;
     background-color: #B99470;
@@ -516,7 +518,7 @@ html{
 .footerDivPrincipal {
     display: flex;
     width: 100%;
-    height: 55%;
+    height: 70%;
     padding: 1% 0 1% 0;
   /*   object-fit: contain; */
     flex-direction: row;
@@ -529,7 +531,7 @@ html{
     padding: 0 0 0 10%;
     justify-content: center;
     align-items: center;
-    text-align: end;
+    /* text-align: end; */
     width: 100%;
     height: 20%;
     font-size:var(--sm);
@@ -560,8 +562,8 @@ html{
     display: flex;
     flex-direction: column;
     /* padding: 0 0 0 2%; */
-    padding: 0 0 0 10%;
-    width: 40%;
+    padding: 0 0 0 1%;
+    width: 60%;
     height: 100%;
     
 }
