--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -1,6 +1,6 @@
 /* Esto es un proyecto forkeado de platzi,m llamado curso de frontend developmen, fue forkeado como curso de java scrpt practico ya ahora lo estoy personalizando para mi tienda CamKatStore, haremos cambios de variables, aumento de variables y funciones y sus imagenes seran de ropa. Este proyecto sigue siendo meramente tecnico */
 
-@media screen and (min-width: 640px) and (max-width: 839px) {
+@media screen and (min-width: 640px) and (max-width: 854px) {
 
 *{
     box-sizing: border-box;
@@ -92,9 +92,12 @@ html{
 
         .navbar-right {
             display: flex;
+           /*  display: relative; */
             width: 30%;
-            justify-content: center;
+            justify-content: end;
         }
+
+
         /*  .navbar-right {
             display: flex;
             justify-content:end;
@@ -143,6 +146,7 @@ html{
 
         .navbar-shopping-cart {
             position: relative;
+            right: 2%;
             cursor:pointer;
         }
 
@@ -156,6 +160,7 @@ html{
             position: absolute;
             top: -6px;
             right: -3px;
+            right: 0.5%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -203,16 +208,11 @@ html{
     }
 
     /* settings del modo mobile*/
-/* 
+
     .mobile-menu {
         display: none;
-        background-color: var(--white);
-        position: absolute;
-        top: 60px;
-        left: 0px; 
-        padding: 5%;
-        width: 90%;
-    } */
+      
+    }
 
     .mobile-menu a:hover {
         border: 1px solid var(--hospital-green);
