--- a/camkatMob.css
+++ b/camkatMob.css
@@ -341,11 +341,17 @@ html{
       width: 14px;
       height: 14px;
       position: absolute;
-      top: 24px;
-      left: 24px;
+      top: 14px;
+      left: 14px;
       z-index: 2;
       padding: 12px;
       border-radius: 50%;
+    }
+    .product-detail-close img {
+      position: absolute;
+      top: 6px;
+      left: 6px;
+      z-index: 2;
     }
     .product-detail-close:hover {
       cursor: pointer;
