--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -86,7 +86,7 @@ html{
 
         .navbar-left {
             display: flex;
-            font-size: var(--xx);
+            font-size: var(--ms);
             width: 70%;
         }
 
@@ -353,16 +353,27 @@ html{
         /* display: none; */
     }
      .product-detail-close {
+      /* display: flex; */
       background: var(--white);
       width: 14px;
       height: 14px;
       position: absolute;
-      top: 24px;
-      left: 24px;
+      top: 14px;
+      left: 14px;
       z-index: 2;
       padding: 12px;
       border-radius: 50%;
+      text-align: start;
+    /*   justify-items: center; */
     }
+
+    .product-detail-close img {
+      position: absolute;
+      top: 6px;
+      left: 6px;
+      z-index: 2;
+    }
+
     .product-detail-close:hover {
       cursor: pointer;
     }
