--- a/camkatMob.css
+++ b/camkatMob.css
@@ -130,6 +130,13 @@ html{
             cursor:pointer;
         }
 
+         .navbar-shopping-cart img{
+            width: 35px;
+            height: 40px;
+            object-fit: contain;
+        
+        }
+
         .navbar-shopping-cart div {
             width: 16px;
             height: 16px;
@@ -138,8 +145,8 @@ html{
             font-size: var(--sm);
             font-weight: bold;
             position: absolute;
-            top: -6px;
-            right: -3px;
+            top: 1px;
+            right: 1px;
             display: flex;
             justify-content: center;
             align-items: center;
