--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -69,6 +69,7 @@ html{
         .logo {
             width: 100px;
             object-fit: contain;
+            cursor: pointer;
         }
 
         .navbar-left ul,
