--- a/camkatMob.css
+++ b/camkatMob.css
@@ -623,62 +623,58 @@ html{
     cursor: pointer;
 }
 
+/* configs para aside o div sobre el total de mis ordenes */
 
+#asideTotalCompras {
+    background-color: var(--white);
+        height: 100%;
+        width: 100%;
+        /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
+        box-sizing: border-box;
+        position: absolute;
+        right: 0;
+        padding: 0 50px;
+}
 
-       /*  @media (max-width: 640px) {
-            .menu {
-                display: block;
-            }
-
-            .navbar-left ul {
-                display: none;
-            }
-
-            .navbar-email {
-                display: none;
-            }
-
-            .desktop-menu {
-               
-                position: absolute;
-                background: var(--white);
-                top: 60px;
-                
-                left: 60px;
-                right: auto;
-                height: auto;
-                border: 1px solid var(--very-light-pink);
-                border-radius: 6px;
-                padding: 20px 20px 0 20px;
-            }
-
-            media query para un estilo de mis ordenes pedidas:
-            .aside {
-                width: 100%;
-            }
-
-            mediaquery de mis productos
-
-            .cards-container {
-                grid-template-columns: repeat(auto-fill, 140px);
-            }
-            .product-card {
-                width: 140px;
-            }
-            .product-card img {
-                width: 140px;
-                height: 140px;
-            }          
-             
-
-            
-
-        }
- */
-        /* @media(min-width:641px) {
-
-            .mobile-menu {
-                display: none;
-            }
-        }
- */
+#my-orderTotalOrdenes {
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+    }
+    #titleTotalOrdenes {
+      font-size: var(--lg);
+      margin-bottom: 40px;
+    }
+    #my-order-containerTotalOrdenes {
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 300px;
+    }
+    #my-order-contentTotalOrdenes {
+      display: flex;
+      flex-direction: column;
+    }
+    #orderTotalOrdenes {
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+      gap: 16px;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    #orderTotalOrdenes p:nth-child(1) {
+      display: flex;
+      flex-direction: column;
+    }
+    #orderTotalOrdenes p span:nth-child(1) {
+      font-size: var(--md);
+      font-weight: bold;
+    }
+    #orderTotalOrdenes p span:nth-child(2) {
+      font-size: var(--sm);
+      color: var(--very-light-pink);
+    }
+    #orderTotalOrdenes p:nth-child(2) {
+      text-align: end;
+      font-weight: bold;
+    }
