--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -190,6 +190,7 @@ html{
       text-decoration: none;
       margin-bottom: 20px;
       display: inline-block;
+      cursor: pointer;
     }
 
     /* settings del modo mobile*/
@@ -618,5 +619,69 @@ html{
     cursor: pointer;
 }
 
+/* configs para aside o div sobre el total de mis ordenes */
+
+#asideTotalCompras {
+    background-color: var(--white);
+        height: 100%;
+        width: 360px;
+        /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
+        box-sizing: border-box;
+        position: absolute;
+        right: 0;
+        padding: 0 3.4%;
+}
+
+#my-orderTotalOrdenes {
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      position: relative;
+      top: 5px;
+    }
+    #titleTotalOrdenes {
+      font-size: var(--lg);
+      margin-bottom: 26px;
+      margin-left: 33%;
+      background-color: #DAC0A3;
+      
+    }
+    #my-order-containerTotalOrdenes {
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 80%;
+      position: relative;
+      top: -163px;
+    }
+    #my-order-contentTotalOrdenes {
+      display: flex;
+      flex-direction: column;
+      /* position: relative;
+      top: -33px; */
+    }
+    #orderTotalOrdenes {
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+      gap: 16px;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    #orderTotalOrdenes p:nth-child(1) {
+      display: flex;
+      flex-direction: column;
+    }
+    #orderTotalOrdenes p span:nth-child(1) {
+      font-size: var(--md);
+      font-weight: bold;
+    }
+    #orderTotalOrdenes p span:nth-child(2) {
+      font-size: var(--sm);
+      color: var(--very-light-pink);
+    }
+    #orderTotalOrdenes p:nth-child(2) {
+      text-align: end;
+      font-weight: bold;
+    }
 
 }
