--- a/camkatMob.css
+++ b/camkatMob.css
@@ -251,12 +251,12 @@ html{
     /* aside  */#shoppingCartContainer{
         background-color: var(--white);
         height: 100%;
-        width: 100%;
+        width: 80%;
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
         box-sizing: border-box;
         position: absolute;
         right: 0;
-        padding: 0 50px;
+        padding: 0 3.4%;
     } 
 
 /* configs de mis ordenes pedidadas: */
@@ -628,12 +628,12 @@ html{
 #asideTotalCompras {
     background-color: var(--white);
         height: 100%;
-        width: 100%;
+        width: 300px;
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
         box-sizing: border-box;
         position: absolute;
         right: 0;
-        padding: 0 50px;
+        padding: 0 3.4%;
 }
 
 #my-orderTotalOrdenes {
@@ -641,19 +641,28 @@ html{
       height: 100vh;
       display: grid;
       place-items: center;
+      position: relative;
+      top: 5px;
     }
     #titleTotalOrdenes {
       font-size: var(--lg);
-      margin-bottom: 40px;
+      margin-bottom: 26px;
+      margin-left: 33%;
+      background-color: #DAC0A3;
+      
     }
     #my-order-containerTotalOrdenes {
       display: grid;
       grid-template-rows: auto 1fr auto;
-      width: 300px;
+      width: 80%;
+      position: relative;
+      top: -163px;
     }
     #my-order-contentTotalOrdenes {
       display: flex;
       flex-direction: column;
+      /* position: relative;
+      top: -33px; */
     }
     #orderTotalOrdenes {
       display: grid;
