--- a/camkatMob.css
+++ b/camkatMob.css
@@ -786,3 +786,133 @@ html{
         display: block;
       }
     } */
+
+
+    /* CONFIGS para crear cuenta */
+
+    .divCrearCuenta{
+        position: absolute;
+        right: 0;
+        top: 44px;
+        width: 100%;
+        height:100%
+    }
+   
+    
+   
+    
+    .primary-buttonCrear {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonCrear {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+    .loginCrear {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+    }
+    .form-containerCrear {
+      position: relative;
+      top: -34px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+    .logoCrear {
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+      /* display: none; */
+    }
+    .formCrear {
+      display: flex;
+      flex-direction: column;
+    }
+    .formCrear a {
+      color: var(--hospital-green);
+      font-size: var(--sm);
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 52px;
+    }
+    .labelCrearName {
+      font-size: var(--sm);
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+     .inputCrearName {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    .input-nameCrear {
+      margin-bottom: 22px;
+    }
+    .labelEmailCrear {
+      font-size: var(--sm);
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .labelPasswordCrear {
+      font-size: var(--sm);
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .inputCrearEmail {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    .input-emailCrear {
+      margin-bottom: 22px;
+    }
+    .inputCrearPassword {
+        background-color: var(--text-input-field);
+        border: none;
+        border-radius: 8px;
+        height: 30px;
+        font-size: var(--md);
+        padding: 6px;
+        margin-bottom: 12px;
+        }
+    .input-passwordCrear {
+      margin-bottom: 22px;
+    }  
+
+    .primary-buttonCrear {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+   
+    .login-buttonCrear {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
