adicionado cursor pointer a opcion menudesktop que sale del correo de menu movil

--- a/camkatMob.css
+++ b/camkatMob.css
@@ -195,6 +195,7 @@ html{
       text-decoration: none;
       margin-bottom: 20px;
       display: inline-block;
+      cursor:pointer;
     }
 
     /* settings del modo mobile*/
