--- a/camkatMob.css
+++ b/camkatMob.css
@@ -251,7 +251,7 @@ html{
 
     /* aside  */#shoppingCartContainer{
         background-color: var(--white);
-        height: 100%;
+        height: auto;
         width: 80%;
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
         box-sizing: border-box;
@@ -259,7 +259,6 @@ html{
         right: 0;
         padding: 0 3.4%;
     } 
-
 /* configs de mis ordenes pedidadas: */
 
     .title-container {
