--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -62,6 +62,8 @@ html{
             border-bottom: 1px solid var(--very-light-pink);
             width: 100%;
             height: 7.6%;
+            position: fixed;
+            background-color: #DAC0A3;
         }
 
         .menu {
@@ -122,7 +124,7 @@ html{
         .navbar-left ul li a,
         .navbar-right ul li a {
             text-decoration: none;
-            color: var(--very-light-pink);
+            color: rgb(128, 74, 54);
             border: 1px solid var(--white);
             padding: 4px;
             border-radius: 8px;
@@ -179,11 +181,11 @@ html{
     .desktop-menu {
         position: absolute;
         background: var(--white);
-        top: 60px;
+        top: 46px;
         right: 60px;
         left: auto;
       height: auto;
-      border: 1px solid var(--very-light-pink);
+      border: 1px solid #000000;
       border-radius: 6px;
       padding: 20px 20px 0 20px;
     }
@@ -271,6 +273,9 @@ html{
         position: absolute;
         right: 0;
         padding: 0 50px;
+        top: 46px;
+        border: 1px solid black;
+        border-radius: 6px;
     } 
 
 /* configs de mis ordenes pedidadas: */
@@ -441,7 +446,9 @@ html{
         width: 100%;
        /*  height: auto; */
         min-height: 62.4%;
-        padding: 0 0 5% 0;
+        /* padding: 0 0 5% 0; */
+         padding: 73px 0 5% 0px;
+
     }
 
     .main-container h1 {
@@ -652,8 +659,10 @@ html{
         box-sizing: border-box;
         position: absolute;
         right: 0;
-        top: 48px;
+        top: 46px;
         padding: 0 3.4%;
+        border: 1px solid black;
+        border-radius: 6px;
 }
 
 #my-orderTotalOrdenes {
@@ -714,10 +723,12 @@ html{
 
     .divIngresoCuenta{
         position: absolute;
-        right: 0;
-        top: 44px;
-        width: 100%;
-        height:100%
+        right: 30%;
+        left: 30%;
+        top: 46px;
+        width: 40%;
+        height: 100%;
+        
         
     }
     .loginIngreso {
@@ -727,6 +738,8 @@ html{
       display: grid;
       place-items: center;
       background-color: var(--white);
+      border: 1px solid #000000;
+      border-radius: 6px;
     }
     .form-containerIngreso {
       position: relative;
@@ -812,10 +825,11 @@ html{
 
     .divCrearCuenta{
         position: absolute;
-        right: 0;
-        top: 44px;
-        width: 100%;
-        height:100%
+        right: 30%;
+        left: 30%;
+        top: 46px;
+        width: 40%;
+        height: 100%;
     }
    
     
@@ -843,6 +857,8 @@ html{
       display: grid;
       place-items: center;
       background-color: var(--white);
+      border: 1px solid #000000;
+      border-radius: 6px;
     }
     .form-containerCrear {
       position: relative;
